--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" href="https://rachelhoneycutt.github.io/crispy-spork-India/">Home</a>
-          <a class="nav-link" href="https://github.com/rachelhoneycutt/urban-tribble-hotel">Repo</a>
+          <a class="nav-link" href="https://github.com/rachelhoneycutt/crispy-spork-India">Repo</a>
           <a class="nav-link" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Frachelhoneycutt.github.io%2Fcrispy-spork-India%2F" target="_blank">Look at this pages validity!!</a>
           <a class="nav-link" href="https://github.com/rachelhoneycutt" target="_blank">Check out my Github!</a>
         </div>
@@ -83,7 +83,7 @@
           <input type="text" class="form-control" id="team" placeholder="cool team name">
         </div>
 
-        <select class="mb-3 form-select" id="num" required>
+        <select class="mb-3 form-select" id="num">
           <option selected>Select how many members are on your team:</option>
           <option value="2">Two</option>
           <option value="3">Three</option>
