--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <select class="mb-3 form-select" id="num">
-          <option selected>Select how many members are on your team:</option>
+          <option selected value="0">Select how many members are on your team:</option>
           <option value="2">Two</option>
           <option value="3">Three</option>
           <option value="4">Four</option>
